--- a/Plot/testMCDATAComparisonPLOTTool_ForNote.cfg
+++ b/Plot/testMCDATAComparisonPLOTTool_ForNote.cfg
@@ -2,7 +2,8 @@
 treeName  = latino
 
 fileSamples = test/WW2jewk/Plot/samples_plot.txt
-inputDirectory = output_Latinos_tree_2012_2orMoreJet2012/
+# inputDirectory = output_Latinos_tree_2012_2orMoreJet2012/
+inputDirectory = output_Latinos_tree_2012_234jet/
 inputBeginningFile = latino_
 
 # Moriond13 (new lumi)
