--- a/Plot/testMCDATAComparisonPLOTTool_ForNote.cfg
+++ b/Plot/testMCDATAComparisonPLOTTool_ForNote.cfg
@@ -36,13 +36,18 @@ nameWeight = 1
 
 [Plot]
 
-VarFile = test/WW2jewk/Plot/testVar_plot.txt
+# VarFile = test/WW2jewk/Plot/testVar_plot.txt
+VarFile = test/WW2jewk/Plot/testVar_plot_16Dec.txt
 
 [Selections]
 CutFile   = test/WW2jewk/Plot/testCut_plot.txt
 
 [Output]
-outFileName = out_test_Latinos_19Nov2013_2300_RunABCD-WWewk.root
+# outFileName = out_test_Latinos_19Nov2013_2300_RunABCD-WWewk.root
+outFileName = out_test_Latinos_16Dec2013_2300_RunABCD-WWewk.root
+
+
+
 
 
 
