--- a/MVAWW2jewk/cfg-add/WW2jewk-DY.cfg
+++ b/MVAWW2jewk/cfg-add/WW2jewk-DY.cfg
@@ -9,7 +9,8 @@ inputBeginningFile = latino_
 [Options]
 
 MVADirectory = Weights-MVA-WWewk
-MVAmethods = MLP,BDTG,BDT
+MVAmethods = MLP,BDTG
+#,BDT
 MVAmethodsMass = weights_testVariables
 
 
