--- a/Plot/testMCDATAComparisonPLOTTool_ForNote.cfg
+++ b/Plot/testMCDATAComparisonPLOTTool_ForNote.cfg
@@ -44,7 +44,8 @@ CutFile   = test/WW2jewk/Plot/testCut_plot.txt
 
 [Output]
 # outFileName = out_test_Latinos_19Nov2013_2300_RunABCD-WWewk.root
-outFileName = out_test_Latinos_16Dec2013_2300_RunABCD-WWewk.root
+# outFileName = out_test_Latinos_16Dec2013_2300_RunABCD-WWewk.root  --> test new variables
+outFileName = out_test_Latinos_17Dec2013_2300_RunABCD-WWewk.root
 
 
 
