--- a/MVAWW2jewk/cfg/WWewk.cfg
+++ b/MVAWW2jewk/cfg/WWewk.cfg
@@ -20,6 +20,7 @@ MVAmethods = BDTG, BDT, MLP
 CutFile = test/WW2jewk/MVAWW2jewk/cut/Cut.txt
 
 [Output]
-outFileName = outMVA_WWewk.root
+# outFileName = outMVA_WWewk.root
+outFileName = outMVA_WWewk_improved.root
 
 
