--- a/Plot/testPlotInputVariables.cfg
+++ b/Plot/testPlotInputVariables.cfg
@@ -2,7 +2,8 @@
 treeName  = latino
 
 fileSamples = test/WW2jewk/Plot/samples_plot.txt
-inputDirectory = output_Latinos_tree_2012_2orMoreJet2012/
+# inputDirectory = output_Latinos_tree_2012_2orMoreJet2012/
+inputDirectory = output_Latinos_tree_2012_2orMoreJet2012_wwewk/
 inputBeginningFile = latino_
 
 # Moriond13 (new lumi)
@@ -34,14 +35,16 @@ doWeightFromFile = true
 nameWeight = 1
 
 [Plot]
-
-VarFile = test/WW2jewk/Plot/testVar_plot_22Feb.txt
+# VarFile = test/WW2jewk/Plot/testVar_plot_22Feb.txt
+VarFile = test/WW2jewk/Plot/testVar_plot_25Jul.txt
 
 [Selections]
-CutFile   = test/WW2jewk/Plot/testCut_plot_22Feb.txt
+# CutFile   = test/WW2jewk/Plot/testCut_plot_22Feb.txt
+CutFile   = test/WW2jewk/Plot/testCut_plot_25Jul.txt
 
 [Output]
-outFileName = out_test_Latinos_22Feb2014_1200_RunABCD-WWewk.root
+# outFileName = out_test_Latinos_22Feb2014_1200_RunABCD-WWewk.root
+outFileName = out_test_Latinos_25Jul2014_1200_RunABCD-WWewk.root
 
 
 
