--- a/Generation/lxbatch/params_lxbatch_GEN-SIM_aQGC.CFG
+++ b/Generation/lxbatch/params_lxbatch_GEN-SIM_aQGC.CFG
@@ -3,16 +3,19 @@ BASEDir = /afs/cern.ch/user/a/amassiro/work/Generation/CMSSW_5_3_14_patch2/src/W
 JOBCfgTemplate = GENSIM_VBF_Wp_Wm_powheg_lnulnu_withTau_8TeV_template.py
 
 # HEPMCinput = /afs/cern.ch/user/a/amassiro/work/public/WW2j/ww2j_LO_mg_Jasper.root
+# HEPMCinput = /afs/cern.ch/user/a/amassiro/work/public/WW2j/ww2j_LO_mg_Anton.root
 HEPMCinput = /afs/cern.ch/user/a/amassiro/work/public/WW2j/ww2j_LO_mg_Anton.root
 
 
+
 # OUTPUTSAVEPath = /store/user/amassiro/WW2j_aQGC_s/8TeV/WW/
-OUTPUTSAVEPath = /store/user/amassiro/WW2j_aQGC_t/8TeV/WW/
+# OUTPUTSAVEPath = /store/user/amassiro/WW2j_aQGC_t/8TeV/WW/
+OUTPUTSAVEPath = /store/user/amassiro/WW2j_aQGC/8TeV/WW_GENSIM/
 
 
 OUTPUTFILEName = WW_GEN-SIM
 
-EVENTSNumber = 10000
+EVENTSNumber = 1000000
 
 EVENTSPerjob = 20
 
