--- a/Generation/lxbatch/params_lxbatch_GEN-SIM_aQGC.CFG
+++ b/Generation/lxbatch/params_lxbatch_GEN-SIM_aQGC.CFG
@@ -10,15 +10,16 @@ HEPMCinput = /afs/cern.ch/user/a/amassiro/work/public/WW2j/VBS_LS01.root
 
 # OUTPUTSAVEPath = /store/user/amassiro/WW2j_aQGC_s/8TeV/WW/
 # OUTPUTSAVEPath = /store/user/amassiro/WW2j_aQGC_t/8TeV/WW/
-OUTPUTSAVEPath = /store/user/amassiro/WW2j_aQGC/8TeV/WW_GENSIM/
-
+# OUTPUTSAVEPath = /store/user/amassiro/WW2j_aQGC/8TeV/WW_GENSIM/
+OUTPUTSAVEPath = /store/group/phys_higgs/cmshww/amassiro/WW2j_aQGC/8TeV/WW_GENSIM/
 
 OUTPUTFILEName = WW_GEN-SIM
 
 EVENTSNumber = 1000000
 
-EVENTSPerjob = 20
+EVENTSPerjob = 500
 
 EXEName = GENSIM_VBF_Wp_Wm_powheg_lnulnu_withTau_8TeV.py
 
-QUEUE = 1nd
+QUEUE = 2nd
+
