--- a/Generation/lxbatch/params_lxbatch_DIGI_aQGC.CFG
+++ b/Generation/lxbatch/params_lxbatch_DIGI_aQGC.CFG
@@ -4,7 +4,8 @@ JOBCfgTemplate = DIGI_template_cfg.py
 
 LISTOFSamples = runList_DIGI_aQGC.txt
 
-OUTPUTSAVEPath = /store/user/amassiro/WW2j_aQGC/8TeV/WW_DIGI/
+OUTPUTSAVEPath = /store/group/phys_higgs/cmshww/amassiro/WW2j_aQGC/8TeV/WW_DIGI/
+# OUTPUTSAVEPath = /store/user/amassiro/WW2j_aQGC/8TeV/WW_DIGI/
 # OUTPUTSAVEPath = /store/user/amassiro/WW2j_aQGC_s/8TeV/WW_DIGI/
 # OUTPUTSAVEPath = /store/user/amassiro/WW2j_aQGC_t/8TeV/WW_DIGI/
 
