--- a/Generation/lxbatch/params_lxbatch_GEN-SIM_aQGC.CFG
+++ b/Generation/lxbatch/params_lxbatch_GEN-SIM_aQGC.CFG
@@ -4,18 +4,21 @@ JOBCfgTemplate = GENSIM_VBF_Wp_Wm_powheg_lnulnu_withTau_8TeV_template.py
 
 # HEPMCinput = /afs/cern.ch/user/a/amassiro/work/public/WW2j/ww2j_LO_mg_Jasper.root
 # HEPMCinput = /afs/cern.ch/user/a/amassiro/work/public/WW2j/ww2j_LO_mg_Anton.root
-HEPMCinput = /afs/cern.ch/user/a/amassiro/work/public/WW2j/VBS_LS01.root
+# HEPMCinput = /afs/cern.ch/user/a/amassiro/work/public/WW2j/VBS_LS01.root
+HEPMCinput = /afs/cern.ch/user/a/amassiro/work/public/WW2j/VBS_LT01.root
 
 
 
 # OUTPUTSAVEPath = /store/user/amassiro/WW2j_aQGC_s/8TeV/WW/
 # OUTPUTSAVEPath = /store/user/amassiro/WW2j_aQGC_t/8TeV/WW/
 # OUTPUTSAVEPath = /store/user/amassiro/WW2j_aQGC/8TeV/WW_GENSIM/
-OUTPUTSAVEPath = /store/group/phys_higgs/cmshww/amassiro/WW2j_aQGC/8TeV/WW_GENSIM/
+# OUTPUTSAVEPath = /store/group/phys_higgs/cmshww/amassiro/WW2j_aQGC/8TeV/WW_GENSIM/
+OUTPUTSAVEPath = /store/group/phys_higgs/cmshww/amassiro/WW2j_aQGC/8TeV/WW_T_GENSIM/
 
 OUTPUTFILEName = WW_GEN-SIM
 
-EVENTSNumber = 1000000
+# EVENTSNumber = 1000000
+EVENTSNumber = 400000
 
 EVENTSPerjob = 500
 
