--- a/Generation/lxbatch/params_lxbatch_AODSIM_aQGC.CFG
+++ b/Generation/lxbatch/params_lxbatch_AODSIM_aQGC.CFG
@@ -5,7 +5,8 @@ JOBCfgTemplate = AODSIM_template_cfg.py
 LISTOFSamples = runList_AODSIM_aQGC.txt
 
 
-OUTPUTSAVEPath = /store/group/phys_higgs/cmshww/amassiro/WW2j_aQGC/8TeV/WW_AODSIM/
+OUTPUTSAVEPath = /store/group/phys_higgs/cmshww/amassiro/WW2j_aQGC/8TeV/WW_T_tau_AODSIM/
+# OUTPUTSAVEPath = /store/group/phys_higgs/cmshww/amassiro/WW2j_aQGC/8TeV/WW_AODSIM/
 # OUTPUTSAVEPath = /store/user/amassiro/WW2j_aQGC/8TeV/WW_AODSIM/
 # OUTPUTSAVEPath = /store/user/amassiro/WW2j_aQGC_t/8TeV/WW_AODSIM/
 
